--- a/app/src/main/res/layout/activity_onboard_activity.xml
+++ b/app/src/main/res/layout/activity_onboard_activity.xml
@@ -64,12 +64,20 @@
 
     </androidx.appcompat.widget.Toolbar>
 
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/toolbar"
+        >
 
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/scroll"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent">
@@ -80,12 +88,18 @@
             android:layout_marginTop="25dp"
             android:layout_marginBottom="10dp"
             android:textColor="@color/colorText"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:padding="12dp"
             android:hint="@string/firstname"
             android:id="@+id/fname"/>
         <EditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/fname"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginHorizontal="25dp"
             android:layout_marginVertical="10dp"
             android:textColor="@color/colorText"
@@ -94,11 +108,15 @@
             android:id="@+id/sname"/>
 
         <LinearLayout
+            android:id="@+id/genderLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
+            app:layout_constraintTop_toBottomOf="@+id/sname"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginHorizontal="25dp"
-            android:layout_marginVertical="0dp">
+            android:layout_marginTop="10dp">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -165,7 +183,10 @@
             android:layout_marginVertical="10dp"
             android:hint="@string/phonenumber"
             android:padding="12dp"
-            android:textColor="@color/colorText" />
+            android:textColor="@color/colorText"
+            app:layout_constraintTop_toBottomOf="@+id/genderLayout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <EditText
             android:layout_width="match_parent"
@@ -175,7 +196,10 @@
             android:textColor="@color/colorText"
             android:padding="12dp"
             android:hint="@string/email"
-            android:id="@+id/email"/>
+            android:id="@+id/email"
+            app:layout_constraintTop_toBottomOf="@+id/phone_number"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
         <!--                android:contentDescription="@string/content_description_media"-->
 
@@ -205,7 +229,11 @@
             android:id="@+id/card"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="25dp">
+            android:layout_margin="25dp"
+            app:cardElevation="5dp"
+            app:layout_constraintTop_toBottomOf="@+id/email"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -336,12 +364,30 @@
             android:layout_height="wrap_content"
             android:text="@string/submit_txt"
             android:textSize="20dp"
-            android:layout_marginHorizontal="25dp"
+            android:layout_margin="25dp"
             style="@style/Widget.MaterialComponents.Button"
             android:background="@color/colorBackground"
             app:elevation="5dp"
-            android:textAllCaps="false"/>
+            android:textAllCaps="false"
+            app:layout_constraintTop_toBottomOf="@+id/card"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
 
-    </LinearLayout>
+        <TextView
+            android:id="@+id/warning_log"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="15dp"
+            android:textAlignment="center"
+            android:padding="8dp"
+            android:textColor="@color/red"
+            android:layout_margin="15dp"
+            android:textAppearance="?attr/textAppearanceHeadline6"
+            app:layout_constraintTop_toBottomOf="@+id/submit_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+    </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
